--- a/tmux.conf
+++ b/tmux.conf
@@ -1,1 +1,52 @@
-/home/bae/Documents/configs/.config/tmux/tmux.conf
+bind r source-file /home/bae/.config/tmux/tmux.conf \; display "tmux.conf reloaded."
+
+set-option -sa terminal-overrides ",xterm*:Tc"
+set -as terminal-features ",alacritty*:RGB"
+
+# change prefix key
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+set -sg escape-time 1
+set -g base-index 1
+setw -g pane-base-index 1
+
+setw -g monitor-activity on
+set -g visual-activity on
+
+set -g mode-keys vi
+set-window-option -g mode-keys vi
+
+set -g history-limit 30000
+
+set -g mouse on
+
+bind-key h split-window -v
+bind-key v split-window -h
+unbind '"'
+unbind %
+
+# resize pane
+bind -r H resize-pane -L 3
+bind -r J resize-pane -D 1
+bind -r K resize-pane -U 1
+bind -r L resize-pane -R 3
+
+# clipboard config
+set -g set-clipboard on
+bind C-c copy-mode
+unbind p
+bind p paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+
+bind o previous-window
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+run '~/.tmux/plugins/tpm/tpm'
