confg tmux, nvim: add horizontal scroll key, tmux session restore feature, nvim session maker(Obsession) so on ..

--- a/tmux.conf
+++ b/tmux.conf
@@ -28,10 +28,10 @@ unbind '"'
 unbind %
 
 # resize pane
-bind -r H resize-pane -L 3
+bind -r H resize-pane -L 1
 bind -r J resize-pane -D 1
 bind -r K resize-pane -U 1
-bind -r L resize-pane -R 3
+bind -r L resize-pane -R 1
 
 # clipboard config
 set -g set-clipboard on
@@ -48,5 +48,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-strategy-nvim 'session'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 run '~/.tmux/plugins/tpm/tpm'
