--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,11 @@
+
 bind r source-file /home/bae/.config/tmux/tmux.conf \; display "tmux.conf reloaded."
 
 set-option -sa terminal-overrides ",xterm*:Tc"
-set -as terminal-features ",alacritty*:RGB"
+set -sa terminal-features ",alacritty*:RGB"
+#set -g default-terminal 'tmux-256color'
+# for cursor shape
+set -as terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q' 
 
 # change prefix key
 unbind C-b
