add argment move key mappings

--- a/tmux.conf
+++ b/tmux.conf
@@ -55,5 +55,6 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-strategy-nvim 'session'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
 
 run '~/.tmux/plugins/tpm/tpm'
