--- a/tmux.conf
+++ b/tmux.conf
@@ -41,12 +41,32 @@ bind -r L resize-pane -R 1
 set -g set-clipboard on
 bind C-c copy-mode
 unbind p
-bind p paste-buffer
+#bind p paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy && wl-paste -n | wl-copy -p"
+bind-key p run "wl-paste -n | tmux load-buffer - ; tmux paste-buffer"
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 bind o previous-window
+
+# add ctrl_g_mode for fzf-git.sh
+bind-key -n -T root C-g switch-client -T ctrl_g_mode
+bind-key -T ctrl_g_mode C-B send-keys C-g C-B
+bind-key -T ctrl_g_mode C-E send-keys C-g C-E
+bind-key -T ctrl_g_mode C-F send-keys C-g C-F
+bind-key -T ctrl_g_mode C-H send-keys C-g C-H
+bind-key -T ctrl_g_mode C-R send-keys C-g C-R 
+bind-key -T ctrl_g_mode C-S send-keys C-g C-S
+bind-key -T ctrl_g_mode C-T send-keys C-g C-T
+bind-key -T ctrl_g_mode C-L send-keys C-g C-L
+bind-key -T ctrl_g_mode b send-keys C-g b 
+bind-key -T ctrl_g_mode e send-keys C-g e
+bind-key -T ctrl_g_mode f send-keys C-g f 
+bind-key -T ctrl_g_mode h send-keys C-g h
+bind-key -T ctrl_g_mode r send-keys C-g r
+bind-key -T ctrl_g_mode s send-keys C-g s
+bind-key -T ctrl_g_mode t send-keys C-g t       
+bind-key -T ctrl_g_mode l send-keys C-g l       
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -58,3 +78,4 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 
 run '~/.tmux/plugins/tpm/tpm'
+# run-shell '~/.tmux/fzf-git-tmux.sh'
